# realtime_frauddetection_system

./: .gitignore  Dockerfile  Makefile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_FIXES_SUMMARY.md  PHASE3_PLAN.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  README.md  SETUP_SUMMARY.md  alembic.ini  docker-compose.yml  plan.md  project-structure.md  pyproject.toml  requirements-dev.txt  requirements.txt  technical-requirements.md
monitoring/prometheus/: prometheus.yml
reports/: daily_report_20250808.html  daily_report_20250808.json  daily_report_20250809.html  daily_report_20250809.json  weekly_report_20250809.json
scripts/: test_fixes.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
src/analytics/: engine.py
src/api/: main.py
src/data_models/database/: config.py  models.py  repositories.py
src/data_models/database/migrations/: env.py
src/data_models/schemas/: transaction.py
src/fraud_detection/rules/: rule_engine.py
src/kafka_consumers/: transaction_consumer.py
src/kafka_producers/: transaction_producer.py
src/monitoring/: alert_manager.py  dashboard_api.py  integration.py  main.py  metrics_collector.py
src/reporting/: generator.py  simple_generator.py
src/security/: authentication.py  rate_limiting.py
src/spark_streaming/: fraud_detection_job.py
src/streaming/: main.py  pipeline_manager.py
src/testing/: load_testing.py
src/transaction_simulator/: generator.py  main.py
tests/unit/: test_transaction_generator.py
